[package]
name = "rs-coco"
version = "0.0.0-alpha.0"
edition = "2021"
description = "🥥 coco » an interactive cli for creating conventional commits."
authors = ["Lucas Colombo <lucas@lucode.ar>"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/rs-coco"
repository = "https://github.com/lucas-labs/coco"
homepage = "https://github.com/lucas-labs/coco"
keywords = ["cli", "conventional-commits", "git", "commit", "conventional", "commit"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "config"]


[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[[bin]]
name = "coco"
path = "src/bin/main.rs"

[lib]
name = "coco"
path = "src/lib/lib.rs"

[dependencies]
indoc = "2.0.5"
matetui = "0.3.4"
rust-i18n = "3.1.2"
eyre = { version = "0.6.12", default-features = false, features = [
    "auto-install",
] }
lool = { git = "https://github.com/lucodear/lool", version = "0.9.0", features = [
    "cli.stylize",
    "macros"
] }
strum = { version = "0.26.1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = [
    "tokio-macros",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
unicode-width = "0.2.0"
tokio-util = "0.7.12"
pico-args = "0.5.0"
sys-locale = "0.3.1"
serde_yaml = "0.9.34"
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3.12"

[i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "locales"
minify-key = true
minify-key-len = 4
minify-key-thresh = 4
