[package]
name = "rs-coco"
version = "0.0.0"
edition = "2021"
description = "🥥 coco » an interactive cli for creating conventional commits."
authors = ["Lucas Colombo <lucas@lucode.ar>"]
readme = "README.md"
license-file = "LICENSE"
documentation = "https://docs.rs/rs-coco"
repository = "https://github.com/lucas-labs/coco"
homepage = "https://github.com/lucas-labs/coco"
keywords = ["cli", "conventional-commits", "git", "commit", "conventional"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "config"]

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[profile.dist]
inherits = "release"
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
rpath = false
overflow-checks = false
debug = 0
debug-assertions = false

[[bin]]
name = "coco"
path = "src/bin/main.rs"

[lib]
name = "coco"
path = "src/lib/lib.rs"

[dependencies]
strum = { version = "0.26.1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
unicode-width = "0.2.0"
serde_yaml = "0.9.34"
tokio-util = "0.7.12"
sys-locale = "0.3.1"
pico-args = "0.5.0"
rust-i18n = "3.1.2"
matetui = "0.3.4"
indoc = "2.0.5"
dirs = "5.0.1"

[dependencies.tokio]
version = "1.40.0"
features = [
    "tokio-macros",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
]

[dependencies.eyre]
version = "0.6.12"
default-features = false
features = [
    "auto-install",
]

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "locales"
minify-key = true
minify-key-len = 4
minify-key-thresh = 4

# Config for 'cargo dist'
[workspace.metadata.dist]
github-attestations = true
cargo-dist-version = "0.19.1"
pr-run-mode = "skip"
ci = "github"
installers = []
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]