[package]
name = "cc-core"
description = "🥥 » coco's core"
publish = false
version.workspace = true
readme.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
lool = { workspace = true, features = ["cli.stylize", "macros"] }
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
matetui = { workspace = true }
rust-i18n = { workspace = true }
dirs = "5.0.1"
serde_yaml = "0.9.33"
unicode-width = "0.2.0"
sys-locale = "0.3.1"

[dev-dependencies]
tempfile = "3.12"

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "../locales"
minify-key = true
minify-key-len = 4
minify-key-thresh = 4