[package]
name = "tui"
description = "🥥 » tui utilities for coco"
publish = false
version.workspace = true
readme.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
lool = { workspace = true, features = ["macros"] }
eyre = { workspace = true }
tokio = { workspace = true }
matetui = { workspace = true }
rust-i18n = { workspace = true }
cc-core = { path = "../core" }
unicode-width = "0.2.0"
tokio-util = "0.7.12"

[package.metadata.i18n]
available-locales = ["en", "es"]
default-locale = "en"
load-path = "../locales"
minify-key = true
minify-key-len = 4
minify-key-thresh = 4